Added first naive attempt at getting L_tilde

--- a/InitialDeprojectionNotebook.ipynb
+++ b/InitialDeprojectionNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 435,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,24 +54,37 @@
     "                 cosb*mub])\n",
     "    \n",
     "rhatvals = np.array([cosb*cosl, cosb*sinl, sinb]).T\n",
-    "pvals = pvals.T"
+    "pvals = pvals.T\n",
+    "\n",
+    "#Some tests\n",
+    "\n",
+    "pk = np.array([0,0,0])\n",
+    "\n",
+    "rhat = np.array([1,1,1]) / np.sqrt(3)\n",
+    "\n",
+    "rhat = np.stack([rhat]*len(pvals))\n",
+    "\n",
+    "vmin = np.array([0,0,0])\n",
+    "dv = np.array([1,1,1])\n",
+    "n = np.array([10,10,10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 437,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def calc_K(pk,rhat,vmin,dv,n) :\n",
+    "def calc_K(pk,rhat,vmin,dv,n):\n",
     "    '''Calculate the values of K simultaneously for all bins'''\n",
     "    \n",
     "    vxmin, vymin, vzmin = vmin\n",
     "    dvx, dvy, dvz = dv\n",
-    "    pkx, pky, pkz = pk\n",
     "    nx, ny, nz = n\n",
+    "    pkx, pky, pkz = pk\n",
+    "    rhatx, rhaty, rhatz = rhat\n",
     "    \n",
     "    K = np.zeros((nx,ny,nz))\n",
     "    \n",
@@ -86,8 +99,6 @@
     "    \n",
     "    if np.linalg.norm(rhat)!=1:\n",
     "        raise ValueError('rhat must be a unit vector')\n",
-    "\n",
-    "    rhatx, rhaty, rhatz = rhat[:,0], rhat[:,1], rhat[:,2]\n",
     "    \n",
     "    vrx = (vx_bins-pkx)/rhatx\n",
     "    vry = (vy_bins-pky)/rhaty\n",
@@ -113,21 +124,19 @@
     "    line_bins = line_bins.astype(int)\n",
     "    #line_bins, unique_ind = np.unique(line_bins,axis=0,return_index=True)\n",
     "    \n",
-    "    #line_len = vr[1:]-vr[:-1]\n",
     "    line_len = vr[1:]-vr[:-1]\n",
     "    non_zero = np.nonzero(line_len)\n",
     "    line_len = line_len[non_zero]\n",
     "    line_bins = line_bins[non_zero]\n",
-    "    #line_len = line_len[unique_ind]\n",
     "    \n",
     "    K[line_bins[:,0],line_bins[:,1],line_bins[:,2]] = line_len/(dvx*dvy*dvz)\n",
     "    \n",
-    "    return K, line_bins, line_len, vr"
+    "    return K"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 438,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 439,
    "metadata": {
     "collapsed": true
    },
@@ -234,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 441,
    "metadata": {
     "scrolled": false
    },
@@ -321,55 +330,71 @@
     "    gx = np.exp(-((vxc-v0x)**2)/(2*dispx**2)) / (dispx*np.sqrt(2*np.pi))\n",
     "    gy = np.exp(-((vyc-v0y)**2)/(2*dispy**2)) / (dispy*np.sqrt(2*np.pi))\n",
     "    gz = np.exp(-((vzc-v0z)**2)/(2*dispz**2)) / (dispz*np.sqrt(2*np.pi))\n",
+    "    gx, gy, gz = gx[:,0], gy[:,0], gz[:,0]\n",
     "    \n",
-    "    phix, phiy, phiz = np.meshgrid(gx,gy,gx)\n",
+    "    phix, phiy, phiz = np.meshgrid(gx,gy,gz)\n",
     "    \n",
     "    phi = np.array([phix,phiy,phiz])\n",
+    "    \n",
+    "    phi = np.sum(phi,axis=0)\n",
     "    \n",
     "    return phi.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(9, 9, 9, 3)\n"
-     ]
-    }
-   ],
+   "execution_count": 442,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "n = np.array([3, 3, 3])\n",
-    "\n",
-    "phi = np.ones((nx,ny,nz))\n",
-    "\n",
-    "vmin = np.array([0,0,0])\n",
-    "\n",
-    "h = np.array([1,1,1])\n",
-    "\n",
-    "g = phi_guess(vmin,h,n)\n",
-    "\n",
-    "print(g.shape)"
+    "def get_L(alpha,pvals,rhat,vmin,dv,n):\n",
+    "    \n",
+    "    \"\"\"Test to obtain our L_tilde function. Call each function for a given sample -> get L.\"\"\"\n",
+    "    \n",
+    "    dvx, dvy, dvz = dv\n",
+    "    \n",
+    "    N = len(pvals)\n",
+    "    \n",
+    "    phi = phi_guess(vmin,dv,n)\n",
+    "    \n",
+    "    exphi = np.exp(phi)\n",
+    "    \n",
+    "    sigma2 = calc_sigma2(rhat,pvals)\n",
+    "    \n",
+    "    phixhi = sec_der(phi,sigma2,dv)\n",
+    "    \n",
+    "    K_sum = 0\n",
+    "    \n",
+    "    for i in range(N):\n",
+    "        rhatval = rhat[i]\n",
+    "        \n",
+    "        K = calc_K(pvals[i],rhat[i],vmin,dv,n)\n",
+    "        Kphi = exphi*K\n",
+    "        K_sum += np.sum(Kphi)\n",
+    "        \n",
+    "    L = np.log(K_sum)/N + np.sum(exphi)-(alpha/(2*hx*hy*hz))*np.sum(phixhi**2)\n",
+    "    \n",
+    "    return L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 443,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1038.7606424003393"
+      ]
+     },
+     "execution_count": 443,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def get_L(pvals,rhat,vmin,dv,n):\n",
-    "    \n",
-    "    \"\"\"Call each function for a given sample -> get L\"\"\"\n",
-    "    "
+    "get_L(1,pvals,rhat,vmin,dv,n)"
    ]
   },
   {
