Improved the calc_K function
Removed the for-loop for each computation for v_prime and replaced it with an array-based method which is much faster

--- a/InitialDeprojectionNotebook.ipynb
+++ b/InitialDeprojectionNotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 180,
    "metadata": {
     "collapsed": true
    },
@@ -10,30 +10,94 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import astropy.units as u\n",
+    "import astropy.coordinates as coord\n",
+    "from astropy.table import Table\n",
+    "from astropy.io import ascii"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Initiation of data\n",
     "\n",
-    "#cosl = np.cos(sample_l)\n",
-    "#cosb = np.cos(sample_b)\n",
-    "#sinl = np.sin(sample_l)\n",
-    "#sinb = np.sin(sample_b)\n",
+    "def load_data(file,flagset):\n",
+    "    \n",
+    "    data_raw = ascii.read(file, format='fast_csv')\n",
+    "    \n",
+    "    data = Table(data_raw, copy=True)\n",
+    "    \n",
+    "    if flagset == 'flag_dup':\n",
+    "        \n",
+    "        flag_list=['flag_dup']\n",
+    "        \n",
+    "    elif flagset == 'flag_any':\n",
+    "        \n",
+    "        flag_list=['flag_any']\n",
     "\n",
-    "#mul=sample values\n",
-    "#mub=sample values\n",
+    "    elif flagset == 'flag_any-lowlogg':\n",
+    "        \n",
+    "        flag_list=['flag_dup','flag_N','flag_outlier','flag_pole']\n",
+    "        \n",
+    "    elif flagset == 'None':\n",
+    "        \n",
+    "        flag_list = []\n",
+    "        \n",
+    "    elif flagset == 'custom':\n",
+    "        \n",
+    "        flag_list=str(input('Tell me which flags to remove: ')).split(',')\n",
     "\n",
-    "n = np.array([30,30,30])\n",
-    "h = np.array([10,10,10])\n",
+    "    else:\n",
+    "        raise Exception('Not a valid flagset')\n",
+    "    \n",
+    "    bad_rows = np.array([])\n",
+    "    \n",
+    "    for i in flag_list:\n",
+    "        \n",
+    "        bad = np.nonzero(data[i])\n",
+    "        \n",
+    "        bad_rows = np.concatenate((bad_rows,bad[0]))\n",
+    "    \n",
+    "    bad_rows = np.unique(bad_rows)\n",
+    "    \n",
+    "    data.remove_rows(bad_rows.astype(int))\n",
+    "    \n",
+    "    return data,data_raw\n",
     "\n",
-    "bvals = np.array([10.,10.,10.])\n",
-    "lvals = np.array([30.,30.,30.])\n",
+    "\n",
+    "flagset = 'flag_any'\n",
+    "\n",
+    "try:\n",
+    "    data\n",
+    "except NameError:\n",
+    "    \n",
+    "    data,data_raw = load_data('Distances_PJM2017.csv',flagset)\n",
+    "\n",
+    "data = data_raw[0:10000]\n",
+    "    \n",
+    "RA = data['RAdeg']*u.degree\n",
+    "DEC = data['DEdeg']*u.degree\n",
+    "pm_RA = data['pmRA_TGAS']*u.mas/u.yr\n",
+    "pm_DEC = data['pmDE_TGAS']*u.mas/u.yr\n",
+    "\n",
+    "sample = coord.ICRS(ra = RA, dec = DEC, pm_ra_cosdec = pm_RA, pm_dec = pm_DEC)\n",
+    "\n",
+    "sample = sample.transform_to(coord.Galactic)\n",
+    "\n",
+    "A = 15.3\n",
+    "B = -11.9\n",
+    "\n",
+    "mul_obs = sample.pm_l_cosb.value\n",
+    "mub_obs = sample.pm_b.value\n",
+    "\n",
+    "#bvals = np.array([10.,10.,10.])\n",
+    "#lvals = np.array([30.,30.,30.])\n",
+    "bvals = sample.b.value\n",
+    "lvals = sample.l.value\n",
     "\n",
     "b = np.deg2rad(bvals) # just a test\n",
     "l = np.deg2rad(lvals)\n",
@@ -43,11 +107,14 @@
     "sinb = np.sin(b)\n",
     "s = 0.1\n",
     "\n",
-    "S = np.array([[-sinl,cosl,0],\n",
-    "              [-sinb*cosl,-sinb*sinl,cosb]])\n",
+    "mul = mul_obs - A*np.cos(2*l)-B\n",
+    "mub = mub_obs + A*np.sin(2*l)*cosb*sinb\n",
     "\n",
-    "mul = np.array([1,1,1])\n",
-    "mub = np.array([1,1,1])\n",
+    "#S = np.array([[-sinl,cosl,0],\n",
+    "#              [-sinb*cosl,-sinb*sinl,cosb]])\n",
+    "\n",
+    "#mul = np.array([1,1,1])\n",
+    "#mub = np.array([1,1,1])\n",
     "\n",
     "pvals = s*np.array([-sinl*cosb*mul - cosl*sinb*mub,\n",
     "                 cosl*cosb*mul - sinl*sinb*mub,\n",
@@ -56,22 +123,28 @@
     "rhatvals = np.array([cosb*cosl, cosb*sinl, sinb]).T\n",
     "pvals = pvals.T\n",
     "\n",
-    "#Some tests\n",
+    "#Some test-values\n",
     "\n",
-    "pk = np.array([0,0,0])\n",
+    "vmin = np.array([-200,-200,-200])\n",
     "\n",
-    "rhat = np.array([1,1,1]) / np.sqrt(3)\n",
+    "n = np.array([8,8,8])\n",
     "\n",
-    "rhat = np.stack([rhat]*len(pvals))\n",
+    "dv = np.array([50,50,50])\n",
     "\n",
-    "vmin = np.array([0,0,0])\n",
-    "dv = np.array([1,1,1])\n",
-    "n = np.array([10,10,10])"
+    "#pk = np.array([0,0,0])\n",
+    "\n",
+    "#rhat = np.array([1,1,1]) / np.sqrt(3)\n",
+    "\n",
+    "#rhat = np.stack([rhat]*len(pvals))\n",
+    "\n",
+    "#vmin = np.array([0,0,0])\n",
+    "#dv = np.array([1,1,1])\n",
+    "#n = np.array([10,10,10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 343,
    "metadata": {
     "collapsed": true
    },
@@ -95,9 +168,7 @@
     "    vy_bins = np.arange(vymin, vymax+dvy, dvy)\n",
     "    vz_bins = np.arange(vzmin, vzmax+dvz, dvz)\n",
     "    \n",
-    "    #v_space = np.array([vx_bins,vy_bins,vz_bins])\n",
-    "    \n",
-    "    if np.linalg.norm(rhat)!=1:\n",
+    "    if np.round(np.linalg.norm(rhat))!=1:\n",
     "        raise ValueError('rhat must be a unit vector')\n",
     "    \n",
     "    vrx = (vx_bins-pkx)/rhatx\n",
@@ -111,16 +182,23 @@
     "    vry = vry[(vry<=vrmax) & (vry>=vrmin)]\n",
     "    vrz = vrz[(vrz<=vrmax) & (vrz>=vrmin)]\n",
     "    vr = np.concatenate((vrx,vry,vrz))\n",
-    "    #vr = np.sqrt(vrx**2+vry**2+vrz**2)\n",
     "    vr.sort()\n",
     "    \n",
     "    vr_prime =(vr[:-1] + vr[1:]) / 2\n",
     "    line_bins = np.zeros((len(vr_prime),3))\n",
-    "    for i in range(len(vr_prime)):\n",
-    "        v_prime = pk + vr_prime[i]*rhat\n",
-    "        line_bins[i] += np.floor((v_prime-vmin)/ dv)\n",
+    "\n",
+    "    pk = np.stack([pk]*len(vr_prime))\n",
+    "    rhat = np.stack([rhat]*len(vr_prime))\n",
+    "    vmin = np.stack([vmin]*len(vr_prime))\n",
+    "    vr_primestack = np.stack([vr_prime]*3,axis=1)\n",
+    "\n",
+    "    v_prime = pk + vr_primestack*rhat\n",
+    "    line_bins += np.floor((v_prime-vmin)/ dv)\n",
     "    \n",
-    "    \n",
+    "#    for i in range(len(vr_prime)):\n",
+    "#        v_prime = pk + vr_prime[i]*rhat\n",
+    "#        line_bins[i] += np.floor((v_prime-vmin)/ dv)\n",
+    "      \n",
     "    line_bins = line_bins.astype(int)\n",
     "    #line_bins, unique_ind = np.unique(line_bins,axis=0,return_index=True)\n",
     "    \n",
@@ -136,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 344,
    "metadata": {
     "collapsed": true
    },
@@ -152,6 +230,8 @@
     "    \n",
     "    A = np.stack([iden]*len(rhat_outer))-rhat_outer\n",
     "\n",
+    "    \"\"\"Look into 'LinAlgError: Singular matrix' for some data points\"\"\"\n",
+    "    \n",
     "    Ainv = np.linalg.inv(A)\n",
     "    \n",
     "    Ainv_mean = np.mean(Ainv,axis=0)\n",
@@ -176,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 345,
    "metadata": {
     "collapsed": true
    },
@@ -243,8 +323,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
-   "metadata": {},
+   "execution_count": 346,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def sec_der(phi,sigma2,dv):\n",
@@ -281,8 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 347,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -343,13 +426,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
-   "metadata": {},
+   "execution_count": 348,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def get_L(alpha,pvals,rhat,vmin,dv,n):\n",
+    "def get_L(alpha,pvals,rhat,vmn,dv,n):\n",
     "    \n",
     "    \"\"\"Test to obtain our L_tilde function. Call each function for a given sample -> get L.\"\"\"\n",
+    "    \n",
+    "#    pvals, rhat, vmin, dv, n = args\n",
     "    \n",
     "    dvx, dvy, dvz = dv\n",
     "    \n",
@@ -368,43 +455,46 @@
     "    for i in range(N):\n",
     "        rhatval = rhat[i]\n",
     "        \n",
-    "        K = calc_K(pvals[i],rhat[i],vmin,dv,n)\n",
+    "        K = calc_K(pvals[i],rhatval,vmin,dv,n)\n",
     "        Kphi = exphi*K\n",
     "        K_sum += np.sum(Kphi)\n",
     "        \n",
-    "    L = np.log(K_sum)/N + np.sum(exphi)-(alpha/(2*hx*hy*hz))*np.sum(phixhi**2)\n",
+    "    L = np.log(K_sum)/N + np.sum(exphi)-(alpha/(2*dvx*dvy*dvz))*np.sum(phixhi**2)\n",
     "    \n",
     "    return L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1038.7606424003393"
-      ]
-     },
-     "execution_count": 443,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.62 s ± 9.56 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
     }
    ],
    "source": [
-    "get_L(1,pvals,rhat,vmin,dv,n)"
+    "#%timeit get_L(1,pvals,rhatvals,vmin,dv,n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 189,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#def max_L(alpha,*args):\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    #make initial guess of alpha and phi (write new phi func)\n",
+    "    #maximize for these two parameters given a sample with stars\n",
+    "    #prosper"
+   ]
   }
  ],
  "metadata": {
