Fixed another error

--- a/InitialDeprojectionNotebook.ipynb
+++ b/InitialDeprojectionNotebook.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 131,
    "metadata": {
     "collapsed": true
    },
@@ -415,8 +415,7 @@
     "    \n",
     "    Kphi_sum_tot = np.sum(Kphi_sum) #Gives the double sum in the first term\n",
     "        \n",
-    "    #L_tilde = Kphi_sum_tot/N - np.sum(exphi)-(alpha/(2*dvx*dvy*dvz))*np.sum(phixhi**2)\n",
-    "    L_tilde = Kphi_sum_tot/N - np.sum(exphi)-(alpha/(2*dvx*dvy*dvz))*np.sum(phixhi**2)\n",
+    "    L_tilde = Kphi_sum_tot/N - np.sum(exphi)-((alpha*dvx*dvy*dvz)/2)*np.sum(phixhi**2)\n",
     "    \n",
     "    negL = -1*(L_tilde+1)\n",
     "    \n",
@@ -425,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 133,
    "metadata": {
     "collapsed": true
    },
@@ -457,18 +456,29 @@
     "    \n",
     "    phi0 = np.ravel(phi0)\n",
     "    \n",
-    "    return fmin_cg(get_L, phi0, args=args)\n",
+    "    #return fmin_cg(get_L, phi0, args=args)\n",
     "   \n",
-    "    #return get_L(phi0, Kvals, N, alpha, dv, n, sigma2)"
+    "    return get_L(phi0, Kvals, N, alpha, dv, n, sigma2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 134,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "543.87057742251966"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "max_L(0.1, pvals, rhatvals, vmin, dv, n)"
    ]
