Added notes and progress on notebook

--- a/InitialDeprojectionNotebook.ipynb
+++ b/InitialDeprojectionNotebook.ipynb
@@ -194,6 +194,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## The first term of $\\tilde{\\mathcal L}$\n",
+    "\n",
     "In order to $f(\\boldsymbol{v})$ we are first interested in finding the probability of observing the tangential velocity $\\boldsymbol{p}_k$ for a star in direction $\\boldsymbol{\\hat{r}}$ with velocity drawn from $f(\\boldsymbol{v})$. This probability is given by\n",
     "\n",
     "\\begin{equation}\n",
@@ -249,13 +251,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given our initial Gaussian velocity distribution for our set of pseudo-stars, we would expect to find that the probability of finding a star with a given tangential velocity $\\boldsymbol{p}_k$ is largest in the centre of our box, which is what we would expect.  "
+    "Given our initial Gaussian velocity distribution for our set of pseudo-stars, we would expect to find that the probability of finding a star with a given tangential velocity $\\boldsymbol{p}_k$ is largest in the centre of our box, which is what we would expect.\n",
+    "\n",
+    "## The third term of $\\tilde{\\mathcal L}$\n",
+    "\n",
+    "The first function required to calculate the final term of $\\tilde{\\mathcal L}$ is $\\texttt{calc_sigma2}$. This function employs the linear algebra required to obtain the the velocity dispersion tensor $\\boldsymbol{\\sigma}^2$ for a given set of stars, as described in sections 3.2 and 3.3 in DB98. The final equation that yields $\\boldsymbol{\\sigma}^2$ is\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{pmatrix} \\sigma_x^2 \\\\ \\sigma_y^2 \\\\ \\sigma_z^2 \\end{pmatrix} = \\frac{3}{14} \\begin{pmatrix} 9 & -1 & -1 \\\\ -1 & 9 & -1 \\\\ -1 & -1 & 9 \\end{pmatrix}\\cdot \\begin{pmatrix} \\langle p_x' p_x' \\rangle \\\\ \\langle p_y' p_y' \\rangle \\\\ \\langle p_z' p_z' \\rangle \\end{pmatrix},\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $p_i'$ is the tangential velocity of a star relative to the sample mean tangential velocity $\\langle p_i \\rangle$ for $i = x,y,z$.\n",
+    "\n",
+    "With the value of $\\boldsymbol{\\sigma}^2$ at hand, we are fit to investigate the sum $\\sum_\\boldsymbol{n} \\phi_\\boldsymbol{n} \\Xi_{\\boldsymbol{n}\\boldsymbol{\\ell}}$. This expression is a numerical approximation of $\\nabla^2 \\ln f(\\boldsymbol{v_\\boldsymbol{\\ell}})$, which integrated over $\\boldsymbol{v}$-space describes the roughness of $f(\\boldsymbol{v})$. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
