Added a fix for memory error when using large boxes

--- a/InitialDeprojectionNotebook.ipynb
+++ b/InitialDeprojectionNotebook.ipynb
@@ -347,7 +347,7 @@
     "\n",
     "This is done by the function $\\texttt{get_negL}$, which calls the aforementioned function and returns the negative value of the log-likelihood. The maximisation is done by the function $\\texttt{max_L}$, which computes the various arguments needed to determine $\\texttt{get_negL}$ for a given sample. $\\texttt{max_L}$ employs the minimisation function $\\texttt{fmin_cg}$ from $\\texttt{scipy.optimize}$ which uses the conjugate gradient algorithm. By minimising $-\\tilde{\\mathcal L}$, we maximise $\\tilde{\\mathcal L}$ and obtain an estimate of the underlying velocity distribution $f(\\boldsymbol{v})$. \n",
     "\n",
-    "After computing the value of $\\tilde{\\mathcal L(\\boldsymbol{\\phi_0})}$, where $\\boldsymbol{\\phi}_0$ is the initial guess of $\\log(f(\\boldsymbol{v}))$ $\\texttt{fmin_cg}$ uses an iterative method to minimse the function value until the norm of the gradient falls below a given threshold, which by default is $10^{-5}$.\n",
+    "After computing the value of $\\tilde{\\mathcal L}(\\boldsymbol{\\phi_0})$, where $\\boldsymbol{\\phi}_0$ is the initial guess of $\\log f(\\boldsymbol{v})$ $\\texttt{fmin_cg}$ uses an iterative method to minimse the function value until the norm of the gradient falls below a given threshold, which by default is $10^{-5}$.\n",
     "\n",
     "#### The gradient of $\\tilde{\\mathcal L}$\n",
     "\n",
@@ -765,29 +765,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([4, 8, 1, ..., 8, 4, 5], dtype=int64)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = np.random.randint(0,9,10000)\n",
     "\n",
     "x_coo = scisp.coo_matrix(x)\n",
     "x_csc = x_coo.tocsc()\n",
     "\n",
-    "x_csc.data[x_csc.data.nonzero()]\n",
+    "xstack = scisp.vstack([x_csc]*100)\n",
+    "\n",
+    "# x_csc.data[x_csc.data.nonzero()]\n",
     "\n",
     "# any(x_csc.data)==0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<101x10000 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 894557 stored elements in COOrdinate format>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scisp.vstack((xstack,x_csc))"
    ]
   },
   {
