Updated test and plot scripts to work with memory error fix

--- a/InitialDeprojectionNotebook.ipynb
+++ b/InitialDeprojectionNotebook.ipynb
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
     "x_coo = scisp.coo_matrix(x)\n",
     "x_csc = x_coo.tocsc()\n",
     "\n",
-    "xstack = scisp.vstack([x_csc]*100)\n",
+    "xstack = scisp.vstack([x_coo]*100)\n",
     "\n",
     "# x_csc.data[x_csc.data.nonzero()]\n",
     "\n",
@@ -783,23 +783,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<101x10000 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 894557 stored elements in COOrdinate format>"
+       "\twith 896274 stored elements in COOrdinate format>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scisp.vstack((xstack,x_csc))"
+    "xcoo = scisp.vstack((xstack,x_csc))\n",
+    "xcoo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<101x10000 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 896274 stored elements in Compressed Sparse Column format>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xcoo.tocsc()"
    ]
   },
   {
