The gradient function is now working as intended.

--- a/DeprojectingGDR2.ipynb
+++ b/DeprojectingGDR2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +102,6 @@
     "except NameError:\n",
     "    data_raw = Table.read('gaiadr2_100pc.fits')\n",
     "\n",
-    "# data_raw = io.fits.open('gaiadr2_20pc.fits')\n",
-    "    \n",
-    "#Physical properties\n",
     "\n",
     "try:\n",
     "    RA = data_raw['ra']\n",
@@ -118,7 +115,7 @@
     "    E_BP_RP = data_raw['e_bp_min_rp_val']\n",
     "    phot_bp_mean_mag = data_raw['phot_bp_mean_mag']\n",
     "    phot_rp_mean_mag = data_raw['phot_rp_mean_mag']\n",
-    "    \n",
+    "\n",
     "except KeyError:    \n",
     "    RA = data_raw['RA']*u.deg\n",
     "    DEC = data_raw['DEC']*u.deg\n",
@@ -157,7 +154,7 @@
     "parallax_raw = parallax_raw.to(u.mas) #This is done to avoid having to deal with inconsitencies in units of the datasets\n",
     "G_mean_raw = G_mean_raw.to(u.mag)\n",
     "BP_RP_raw = BP_RP_raw.to(u.mag)\n",
-    "              \n",
+    "\n",
     "dist = parallax_raw.to(u.kpc,equivalencies=u.parallax())\n",
     "\n",
     "sample_raw = coord.ICRS(ra = RA, dec = DEC, pm_ra_cosdec = pm_RA, pm_dec = pm_DEC,distance=dist)\n",
@@ -189,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -263,30 +260,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jooehn/Downloads/ENTER/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
-      "  return getattr(self.data, op)(other)\n",
-      "/home/jooehn/Downloads/ENTER/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in greater\n",
-      "  return getattr(self.data, op)(other)\n"
+     "ename": "NameError",
+     "evalue": "name 'G_mean_raw' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-a5e221d2bac3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mac\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0msample_gc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0mdistance_cut\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;31m#,E_BP_RP>0.015]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0msample\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mG_mean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBP_RP\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapply_cuts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_gc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mG_mean_raw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mBP_RP_raw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0madditional_cuts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mac\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0msample_gc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'G_mean_raw' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "((700055,), (224622,))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
