Updated all python files to work with v1_0 and updated functions in said version

--- a/DeprojectingGDR2.ipynb
+++ b/DeprojectingGDR2.ipynb
@@ -12,7 +12,7 @@
     "from astropy.table import Table\n",
     "from scipy.ndimage.filters import gaussian_filter\n",
     "from scipy.stats import binned_statistic_2d as bs2d\n",
-    "from Deproject_v1 import *\n",
+    "from Deproject_v1_0 import *\n",
     "from fast_kde import fast_kde\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
