Additional fixes to notebook and Deproject_exe for when not using data from file

--- a/DeprojectingGDR2.ipynb
+++ b/DeprojectingGDR2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
     "try:\n",
     "    data_raw\n",
     "except NameError:\n",
-    "    data_raw = Table.read('gaiadr2_200pc_clean.fits')\n",
+    "    data_raw = Table.read('gaiadr2_100pc_clean.fits')\n",
     "\n",
     "\n",
     "try:\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -290,10 +290,10 @@
     {
      "data": {
       "text/plain": [
-       "((1152824,), (1100400,))"
+       "((211738,), (200335,))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,10 +411,11 @@
     "#     xc = (xbins[1:]+xbins[:-1])/2\n",
     "#     yc = (ybins[1:]+ybins[:-1])/2\n",
     "\n",
-    "    dsty = fast_kde(BP_RP,Gvals,sample=True)[2]\n",
+    "    dsty = fast_kde(BP_RP,Gvals,sample=True)[2] #We smooth the data using a Gaussian kernel density estimation function\n",
     "        \n",
     "    idx = dsty.argsort()\n",
     "    \n",
+    "    #We sort the args to get the largest values on top in the scatter plot\n",
     "    xvals, yvals, zvals = BP_RP[idx],Gvals[idx],dsty[idx]\n",
     "    \n",
     "    fig = plt.figure(figsize=(10,8))\n",
@@ -470,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,13 +603,7 @@
     "    \n",
     "    bin_disp[counts<10] = 0\n",
     "    \n",
-    "    bd_smooth = gaussian_filter(bin_disp,sigma=2,order=0,mode='reflect')\n",
-    "\n",
-    "#     xx, yy = np.meshgrid(xbins,ybins)\n",
-    "#     bd_smooth = fftconvolve([x,y],bin_disp)\n",
-    "    \n",
-    "#     c_vals0 = bd_smooth[0,bin_stat_disp.binnumber[0]-2],bd_smooth[1,bin_stat_disp.binnumber[1]-2]\n",
-    "#     c_vals = np.asarray(c_vals0)\n",
+    "    bd_smooth = gaussian_filter(bin_disp,sigma=2,order=0,mode='reflect') #We smooth the colors to make the plot nicer\n",
     "    \n",
     "    c_vals = bd_smooth[bin_stat_disp.binnumber[0]-2,bin_stat_disp.binnumber[1]-2]\n",
     "    \n",
@@ -626,12 +621,13 @@
     "    \n",
     "    ax.invert_yaxis()\n",
     "    \n",
-    "    extent = [xmin,xmax,ymin,ymax]\n",
+    "#     extent = [xmin,xmax,ymin,ymax]\n",
     "    \n",
     "    if len(additional_cuts) != 0:\n",
-    "        ax.scatter(BP_RP_raw,Gvals_raw,s=3,color='black',edgecolor='')\n",
+    "        ax.scatter(BP_RP_raw,Gvals_raw,s=3,color='black',edgecolor='') #So we won't plot single segments if applying cuts\n",
     "\n",
-    "    im = ax.scatter(BP_RP_raw,Gvals_raw,c=c_vals,s=3,cmap=plt.cm.get_cmap('viridis'),edgecolor='')\n",
+    "    im = ax.scatter(BP_RP_raw,Gvals_raw,c=zvals,s=3,cmap=plt.cm.get_cmap('viridis'),edgecolor='')\n",
+    "    #The scatter plot looks the nicest and allows us to see the individual stars in the HRD\n",
     "    \n",
     "#     im = ax.imshow(bin_disp.T,origin='lower',aspect='auto',extent=extent,cmap=plt.cm.get_cmap('inferno'),vmax=100)\n",
     "#     im = ax.contourf(xc,yc,bin_disp.T,100,origin='lower',cmap=plt.cm.get_cmap('YlOrRd'),vmax=75)\n",
@@ -641,6 +637,15 @@
     "    plt.show()\n",
     "    \n",
     "    return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The velocity dispersion is plotted by the function $\\texttt{plot_HRD_veldisp}$, which given a sample containing GDR2 data will plot a HRD diagram with a color map indicating the size of the velocity dispersion for stars within a given region in the plot. \n",
+    "\n",
+    "We can provide additional cuts to only compute the velocity dispersion and plot it in parts of the HRD diagram. We do this below for the WD section of an HRD diagram by simply cutting away stars above and below two lines in the diagram."
    ]
   },
   {
