--- a/DeprojectingGDR2.ipynb
+++ b/DeprojectingGDR2.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from astropy import coordinates as coord\n",
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,8 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def calc_p_rhat(sample):\n",
@@ -89,18 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Initiation of data, now loading GRD1 data and setting up the various parameters used in the code below\n",
     "\n",
-    "os.chdir(\"/home/jooehn/Documents/Summer project/GDR2 data\")\n",
+    "os.chdir(\"/Users/danielmikkola/DeprojectionProject/DATA/\")\n",
     "\n",
     "try:\n",
     "    data_raw\n",
     "except NameError:\n",
-    "    data_raw = Table.read('gaiadr2_200pc_clean.fits')\n",
+    "    data_raw = Table.read('gaiadr2_100pc_clean.fits')\n",
     "\n",
     "\n",
     "try:\n",
@@ -188,6 +194,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -264,12 +271,12 @@
     "    G_mean_new = G_mean[mask]\n",
     "    BP_RP_new = BP_RP[mask]\n",
     "    \n",
-    "    return sample_new, G_mean_new, BP_RP_new"
+    "    return sample, G_mean_new, BP_RP_new"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -278,9 +285,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jooehn/Downloads/ENTER/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "/Users/danielmikkola/anaconda3/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
       "  return getattr(self.data, op)(other)\n",
-      "/home/jooehn/Downloads/ENTER/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in greater\n",
+      "/Users/danielmikkola/anaconda3/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in greater\n",
       "  return getattr(self.data, op)(other)\n"
      ]
     },
@@ -290,7 +297,7 @@
        "((211738,), (29058,))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +318,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_HRD(sample,G_mean,BP_RP):\n",
@@ -385,7 +394,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_HRD_cut(sample,G_mean,BP_RP,base_sample=[]):\n",
@@ -469,7 +480,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def calc_sigma_from_idxx(idx):\n",
@@ -552,7 +565,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_HRD_veldisp(sample_raw, G_mean_raw,BP_RP_raw,sigma_comp,additional_cuts=[]):\n",
@@ -723,7 +738,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_HRD_wd(sample,G_mean,BP_RP,base_sample=[]):\n",
@@ -830,6 +847,7 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -864,6 +882,7 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -939,7 +958,9 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "wd_idx_mask = np.in1d(G_mean_raw.value,wd_G_mean.value,)\n",
@@ -982,7 +1003,9 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "indlist = np.concatenate([np.ravel(np.argwhere(~np.isnan(G_mean))),np.ravel(np.argwhere(~np.isnan(BP_RP)))]) \n",
@@ -997,7 +1020,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "datfil = \"'gaiadr2_25pc.fits\\'\\n\""
@@ -1006,7 +1031,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1027,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
