Trial of derivative finding

--- a/PaulRunsSomeChecks.ipynb
+++ b/PaulRunsSomeChecks.ipynb
@@ -195,6 +195,7 @@
    "outputs": [],
    "source": [
     "def compute_sec_der_local(phi_in,sigma2,dv) : \n",
+    "    '''Compute second derviative term d2phi/d[vxvyvz] equivalent'''\n",
     "    sec_der = np.zeros(phi_in.shape)\n",
     "    sec_der[1:-1,:,:] += (phi_in[:-2,:,:] + phi_in[2:,:,:] - 2.*phi_in[1:-1,:,:]) * sigma2[0]/(dv[0])\n",
     "    sec_der[:,1:-1,:] += (phi_in[:,:-2,:] + phi_in[:,2:,:] - 2.*phi_in[:,1:-1,:]) * sigma2[1]/(dv[1])\n",
@@ -202,6 +203,7 @@
     "    return sec_der\n",
     "\n",
     "def compute_sec_der_sq_local(phi_in,sigma2,dv) :\n",
+    "    '''Compute sum of second derivative term squared (needed per Dehnen 98)'''\n",
     "    sec_der_sq = compute_sec_der_local(phi_in,sigma2,dv)**2\n",
     "    return np.sum(sec_der_sq)"
    ]
@@ -213,6 +215,7 @@
    "outputs": [],
    "source": [
     "def compute_grad_sec_der_sq(phi_in,sigma2,dv) :\n",
+    "    '''Compute derivative of penalty term with respect to each phi value'''\n",
     "    grad_sec_der_sq = np.zeros(phi0.shape)\n",
     "    sec_der_loc = compute_sec_der_local(phi0,sigma2,dv)\n",
     "\n",
